--- a/app/src/main/res/values-v16/styles.xml
+++ b/app/src/main/res/values-v16/styles.xml
@@ -1,22 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-
-    </style>
 
     <style name="textviewstyle">
 
+        <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">@color/colorAccent</item>
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:fontFamily">@color/colorAccent</item>
 
     </style>
-
 
     <style name="formlayout">
 
@@ -26,5 +18,4 @@
         <item name="android:background">@color/colorAccent</item>
 
     </style>
-
 </resources>
